fix nav menu on mobile

--- a/styles/components/_navigation.css
+++ b/styles/components/_navigation.css
@@ -181,9 +181,7 @@ nav {
 
     .nav-links {
         pointer-events: auto;
-        display: flex;
-        transform: translateY(-100%);
-        opacity: 0;
+        display: none;
         position: absolute;
         top: 100%;
         left: 0;
@@ -196,7 +194,7 @@ nav {
     }
 
     nav.menu-open .nav-links {
-        opacity: 1;
+        display: flex;
     }
 
     .nav-links a,
