--- a/styles/main.css
+++ b/styles/main.css
@@ -36,18 +36,18 @@
 
 @media (max-width: 768px) {
     .main-content {
-        margin-left: 16px;
-        margin-right: 16px;
-        margin-top: 16px;
-        margin-bottom: 16px;
+        margin-left: 24px;
+        margin-right: 24px;
+        margin-top: 24px;
+        margin-bottom: 24px;
     }
 }
 
 @media (max-width: 480px) {
     .main-content {
-        margin-left: 0px;
-        margin-right: 0px;
-        margin-top: 0px;
-        margin-bottom: 0px;
+        margin-left: 16px;
+        margin-right: 16px;
+        margin-top: 16px;
+        margin-bottom: 16px;
     }
 }
